# MNAF_MiguelEnterria

./: README.md  electron.py  pyproject.toml
PrimerCuatri/TrabajoMontañaRusa/Latex/: Documento.tex  Documento.toc
PrimerCuatri/src/: MNAF2025.py  __init__.py
PrimerCuatri/src/mnaf.egg-info/: SOURCES.txt
SegundoCuatri/PL1SimulacionDisco/: 001_PL1.py  002_mejorado.py  003_line2d.py  004_mejoraEficiencia.py  005_Boltzman.py  006_KDTree.py  007_Presion.py  2025-26_Miguel_Enterria_Lastra_v1.py
SegundoCuatri/PL2OndaElectromagnética/: 001_primero.py  003_3D.py  004_3Dielectrico.py  005_3Dconductividad.py  2025-26_Miguel_Enterria_Lastra_v1.py
SegundoCuatri/PL3Schrodinguer/: 001_primero.py  002_optimizacion.py  2025-26_Miguel_Enterria_Lastra_v1.py  prueba.py
SegundoCuatri/PL4PozoPotencial/: 001_primero.py  002_variosUmax.py  003_mejoraEfsobre001.py  004_biseccion.py  005_Numerov.py  006_comparaciónMetodos.py  007_AtomoH.py  008_Helio.py  009_Litio.py
SegundoCuatri/PL4PozoPotencial/Informe/: InformePozoPotencial.aux  InformePozoPotencial.fdb_latexmk  InformePozoPotencial.fls  InformePozoPotencial.tex
TrabajoMontañaRusa/: Trabajo2D copy.ipynb  Trabajo2D.ipynb  Trabajo3D.ipynb  diagrama.drawio  pkgcurvas.py  pkgmrusa.py
TrabajoMontañaRusa/Latex/: Documento.aux  Documento.fdb_latexmk  Documento.fls  Documento.out
data/: ITP_animal.txt  Porsche911_perfil.txt
practicas/: PracticaDerInt.ipynb  PracticaInerpolación.py  PracticaInterpolacion.ipynb
src/: MNAF2025.py
src/mnaf.egg-info/: PKG-INFO  requires.txt
