[project]
name = "mnaf"
version = "0.1.0"
description = "Entorno del curso Métodos Numéricos y Aplicaciones a la Física"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "numpy",
  "scipy",
  "sympy",
  "matplotlib",
  "pandas",
  "jupyterlab",
  "ipykernel",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
   

[tool.setuptools.packages.find]
where = ["src"]
